syntax = "proto3";

package operator;

import "google/protobuf/descriptor.proto";

option go_package = "pb";

message Source {
	SourceType type = 1;
	User user = 2;
	Room room = 3;
}

message Room {
	string name = 1;
}

message User {
	string id = 1;
	string login = 2;
	string real_name = 3;
	string email = 4;
}

enum SourceType {
	HUBOT_SLACK = 0;
	COMMAND = 1;
}

message Output {
	string PlainText = 1;
}

message ServerStartupNotice {
	string Address = 1;
	string Protocol = 2;
	repeated Service services = 3;
}

message ServerStartupError {
	string message = 1;
}

message ServiceRegistered {
	Service service = 1;
}

message ServiceStartupError {
	Service service = 1;
	string message = 2;
}

message Service {
	string name = 1;
}

extend google.protobuf.ServiceOptions {
	string name = 51234;
}
